# SobX

./: CMakeLists.txt  LICENSE  README.md
include/sobx/: sobx.hpp
tests/: CMakeLists.txt  dispose.cpp  multiple.cpp  nested.cpp  not_comparable.cpp  recursive.cpp  same_value.cpp  simple.cpp  switching.cpp  test_main.cpp
